--- a/DemoUserApp/DemoTotalDay/DemoAllDay/demoDay5ActionTap/demoDay5ActionTap/Base.lproj/Main.storyboard
+++ b/DemoUserApp/DemoTotalDay/DemoAllDay/demoDay5ActionTap/demoDay5ActionTap/Base.lproj/Main.storyboard
@@ -90,12 +90,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G6O-se-6Cd">
-                                <rect key="frame" x="35" y="71" width="98" height="67"/>
+                                <rect key="frame" x="20" y="103" width="113" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="UIRotation"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Wx-rA-1aq">
-                                <rect key="frame" x="35" y="146" width="98" height="67"/>
+                                <rect key="frame" x="20" y="146" width="113" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Rotation"/>
                                 <connections>
@@ -103,7 +103,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dr5-W0-kzo">
-                                <rect key="frame" x="35" y="221" width="98" height="67"/>
+                                <rect key="frame" x="20" y="231" width="113" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Loadmore"/>
                                 <connections>
@@ -111,7 +111,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nfT-Fa-Hbt">
-                                <rect key="frame" x="141" y="71" width="98" height="67"/>
+                                <rect key="frame" x="141" y="103" width="113" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="UITap"/>
                                 <connections>
@@ -119,23 +119,15 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5h-zR-ann">
-                                <rect key="frame" x="247" y="71" width="98" height="67"/>
+                                <rect key="frame" x="262" y="103" width="113" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Pinch"/>
                                 <connections>
                                     <action selector="pinchActionClick:" destination="OnX-M7-KII" eventType="touchUpInside" id="idF-Mm-49I"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kd1-Nc-1HT">
-                                <rect key="frame" x="142" y="147" width="98" height="67"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Swipe"/>
-                                <connections>
-                                    <action selector="swiperActionClick:" destination="OnX-M7-KII" eventType="touchUpInside" id="Idh-ji-xeL"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zfh-CZ-4b8">
-                                <rect key="frame" x="247" y="146" width="98" height="67"/>
+                                <rect key="frame" x="141" y="231" width="113" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Table View"/>
                                 <connections>
@@ -143,7 +135,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iIX-oG-5bB">
-                                <rect key="frame" x="141" y="221" width="98" height="67"/>
+                                <rect key="frame" x="20" y="340" width="113" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Collection"/>
                                 <connections>
@@ -151,9 +143,34 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E0F-0p-FWc">
-                                <rect key="frame" x="247" y="221" width="98" height="67"/>
+                                <rect key="frame" x="141" y="340" width="113" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Slider H"/>
+                                <connections>
+                                    <action selector="showCollectionSliderViewActionClick:" destination="OnX-M7-KII" eventType="touchUpInside" id="YES-At-jnQ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Collection View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TiU-Mp-3XS">
+                                <rect key="frame" x="20" y="306" width="118" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TableView " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zBU-gW-CDL">
+                                <rect key="frame" x="20" y="208" width="82" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kd1-Nc-1HT">
+                                <rect key="frame" x="141" y="146" width="113" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Swipe"/>
+                                <connections>
+                                    <action selector="swiperActionClick:" destination="OnX-M7-KII" eventType="touchUpInside" id="Idh-ji-xeL"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -338,7 +355,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v7c-uE-Ual">
-                                                    <rect key="frame" x="5" y="5" width="116" height="95"/>
+                                                    <rect key="frame" x="5" y="5" width="105" height="95"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="v7c-uE-Ual" secondAttribute="height" multiplier="1:1" id="wz2-TU-4sc"/>
                                                     </constraints>
@@ -409,6 +426,61 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jnt-58-g6Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1900.0000000000002" y="731.91964285714278"/>
+        </scene>
+        <!--Collection Slider View Controller-->
+        <scene sceneID="ap7-uY-8YT">
+            <objects>
+                <viewController storyboardIdentifier="CollectionSliderVC" id="C7q-tg-PMx" customClass="CollectionSliderViewController" customModule="demoDay5ActionTap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="def-hu-mXj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="TvR-Ey-xM1">
+                                <rect key="frame" x="0.0" y="0.0" width="394" height="896"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yug-BC-fSr">
+                                    <size key="itemSize" width="410" height="862"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="1ST-AO-ny6" customClass="CustomCollectionViewCell" customModule="demoDay5ActionTap" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="17" width="410" height="862"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="410" height="862"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fRD-wF-mAE">
+                                                    <rect key="frame" x="20" y="20" width="370" height="842"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <connections>
+                                            <outlet property="image" destination="fRD-wF-mAE" id="cPT-ia-N1H"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TvR-Ey-xM1" firstAttribute="width" secondItem="def-hu-mXj" secondAttribute="width" id="3BV-CR-RxO"/>
+                            <constraint firstItem="TvR-Ey-xM1" firstAttribute="leading" secondItem="0PB-Bt-aey" secondAttribute="leading" id="Qbt-qQ-rKs"/>
+                            <constraint firstItem="TvR-Ey-xM1" firstAttribute="top" secondItem="def-hu-mXj" secondAttribute="topMargin" constant="-44" id="WJZ-Yf-Rxt"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="TvR-Ey-xM1" secondAttribute="bottom" constant="-34" id="lJB-ET-UBx"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0PB-Bt-aey"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="TvR-Ey-xM1" id="ygP-Rc-dqF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MxR-qz-79j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2669.5652173913045" y="731.91964285714278"/>
         </scene>
         <!--Rotation View Controller-->
         <scene sceneID="qDY-BM-p25">
