example get Json API

--- a/DemoUserApp/DemoTotalDay/DemoAllDay/demoDay5ActionTap/demoDay5ActionTap/Base.lproj/Main.storyboard
+++ b/DemoUserApp/DemoTotalDay/DemoAllDay/demoDay5ActionTap/demoDay5ActionTap/Base.lproj/Main.storyboard
@@ -187,6 +187,21 @@
                                     <action selector="showScrollViewActionClick:" destination="OnX-M7-KII" eventType="touchUpInside" id="W3m-Oo-eFn"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="API" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LHB-t1-Fa9">
+                                <rect key="frame" x="21" y="474" width="26" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5WU-lQ-XOy">
+                                <rect key="frame" x="23" y="513" width="113" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Get Api"/>
+                                <connections>
+                                    <action selector="showApiExamoleViewActionClick:" destination="OnX-M7-KII" eventType="touchUpInside" id="7VM-3k-rCw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="vo4-TY-jpg"/>
@@ -456,6 +471,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bPK-Cy-5yE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1491" y="1451"/>
+        </scene>
+        <!--Api Example View Controller-->
+        <scene sceneID="9dk-97-7r3">
+            <objects>
+                <viewController storyboardIdentifier="ApiExampleVC" id="xPF-g9-W6N" customClass="ApiExampleViewController" customModule="demoDay5ActionTap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AGu-tV-sn5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="VVZ-tS-Sja"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7lx-dN-gsj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-548" y="1455"/>
         </scene>
         <!--Collection Slider View Controller-->
         <scene sceneID="ap7-uY-8YT">
