--- a/DemoAlamofire/DemoAlamofire/Base.lproj/Main.storyboard
+++ b/DemoAlamofire/DemoAlamofire/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cbK-Zg-aH2">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jlN-BG-Bbm">
-                                <rect key="frame" x="338" y="60" width="60" height="44"/>
+                                <rect key="frame" x="338" y="104" width="60" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="BZ7-vk-Ab9"/>
                                     <constraint firstAttribute="width" constant="60" id="G3K-F4-hw1"/>
@@ -30,7 +30,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input comics" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LfH-RE-S1e">
-                                <rect key="frame" x="16" y="60" width="306" height="40"/>
+                                <rect key="frame" x="16" y="104" width="306" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="ulq-9K-Yhq"/>
                                 </constraints>
@@ -39,7 +39,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="T5o-Of-2Hv">
-                                <rect key="frame" x="0.0" y="116" width="414" height="730"/>
+                                <rect key="frame" x="0.0" y="160" width="414" height="686"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="Cell" rowHeight="127" id="Aqj-DS-zBc" customClass="AlbumTableViewCell" customModule="DemoAlamofire" customModuleProvider="target">
@@ -106,6 +106,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="tlH-O1-dac"/>
                     <connections>
                         <outlet property="btnSearch" destination="jlN-BG-Bbm" id="Rpy-Ox-NOZ"/>
                         <outlet property="tbvAlbum" destination="T5o-Of-2Hv" id="iL7-m7-n7n"/>
@@ -113,6 +114,79 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="957.97101449275374" y="20.758928571428569"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="86A-GT-Y4F">
+            <objects>
+                <viewController storyboardIdentifier="DetailVC" id="w8A-gz-wQP" customClass="DetailViewController" customModule="DemoAlamofire" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="t3I-L6-QRg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z7m-AM-kRy">
+                                <rect key="frame" x="16" y="54" width="382" height="83"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="llH-No-7Zl">
+                                <rect key="frame" x="16" y="407" width="382" height="430"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="430" id="EPP-AO-UaQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YVM-NB-6xa">
+                                <rect key="frame" x="16" y="147" width="382" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="c70-5B-CHg"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YVM-NB-6xa" firstAttribute="leading" secondItem="2oG-UE-X7Q" secondAttribute="leading" constant="16" id="4nc-NA-3PJ"/>
+                            <constraint firstItem="llH-No-7Zl" firstAttribute="leading" secondItem="2oG-UE-X7Q" secondAttribute="leading" constant="16" id="7M6-8X-Pi2"/>
+                            <constraint firstItem="2oG-UE-X7Q" firstAttribute="trailing" secondItem="Z7m-AM-kRy" secondAttribute="trailing" constant="16" id="7xw-Md-Ta8"/>
+                            <constraint firstItem="2oG-UE-X7Q" firstAttribute="trailing" secondItem="YVM-NB-6xa" secondAttribute="trailing" constant="16" id="ACz-KN-GQc"/>
+                            <constraint firstItem="2oG-UE-X7Q" firstAttribute="trailing" secondItem="llH-No-7Zl" secondAttribute="trailing" constant="16" id="P1g-2u-eYH"/>
+                            <constraint firstItem="YVM-NB-6xa" firstAttribute="top" secondItem="Z7m-AM-kRy" secondAttribute="bottom" constant="10" id="ZuL-4f-BCf"/>
+                            <constraint firstItem="llH-No-7Zl" firstAttribute="top" secondItem="YVM-NB-6xa" secondAttribute="bottom" constant="10" id="aIz-gn-gF6"/>
+                            <constraint firstItem="2oG-UE-X7Q" firstAttribute="bottom" secondItem="llH-No-7Zl" secondAttribute="bottom" constant="25" id="ngm-JX-Ve8"/>
+                            <constraint firstItem="Z7m-AM-kRy" firstAttribute="top" secondItem="2oG-UE-X7Q" secondAttribute="top" constant="10" id="oXz-rd-SZP"/>
+                            <constraint firstItem="Z7m-AM-kRy" firstAttribute="leading" secondItem="2oG-UE-X7Q" secondAttribute="leading" constant="16" id="z6q-ac-XJf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2oG-UE-X7Q"/>
+                    </view>
+                    <connections>
+                        <outlet property="image" destination="YVM-NB-6xa" id="854-tG-12U"/>
+                        <outlet property="lbDescription" destination="llH-No-7Zl" id="D3n-mo-76M"/>
+                        <outlet property="lbDetail" destination="Z7m-AM-kRy" id="0aJ-X9-bfL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aNJ-mJ-7V0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1720.289855072464" y="16.741071428571427"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="NOA-bG-Be9">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cbK-Zg-aH2" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4bn-vd-0ir">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="esW-qo-W1w"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZoL-Me-CwZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="47.826086956521742" y="20.758928571428569"/>
         </scene>
